<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/padding_16"
    tools:context="br.com.soaresdeveloper.tribarato.CriarOfertaActivity">

    <EditText
        android:id="@+id/tituloOferta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ht_titulo_oferta"
        android:inputType="text"
        android:maxLength="35"/>

    <EditText
        android:id="@+id/descricaoOferta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ht_descricao"
        android:inputType="textMultiLine"
        android:maxLength="140"/>

    <EditText
        android:id="@+id/enderecoOferta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ht_endereco"
        android:inputType="textMultiLine"
        android:maxLength="140"/>

    <EditText
        android:id="@+id/precoOferta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ht_preco"
        android:inputType="numberDecimal" />

    <Button
        android:id="@+id/btnPublicarOferta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/medium_vertical"
        android:background="@color/colorPrimary"
        android:text="@string/btn_publicar_oferta"
        android:textSize="@dimen/txt_button"
        android:textColor="#fff"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/btnLimparCampos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_vertical"
        android:background="@color/com_facebook_button_border_color_focused"
        android:text="@string/btn_limpar_campos"
        android:textSize="@dimen/txt_button"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"/>

</LinearLayout>
